# RS-Git

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: auth.rs  issues.rs  mail.rs  main.rs
static/: index.html  rgit_web.js  rgit_web_bg.wasm
tests/: poem_compat_trial.rs
web/: Cargo.toml
web/src/: auth.rs  lib.rs  wiki.rs
