[package]
name = "rgit"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Gitea(Go製)のRust版を目指す、自己ホスト型Git forge(v0.1.0時点はgit smart HTTPのclone/pushのみ、Web UI・Issue・PRは未実装)"
repository = "https://github.com/aon-co-jp/RGit"

[[bin]]
name = "rgit"
path = "src/main.rs"

[dependencies]
poem = { version = "3.1", features = ["static-files"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
sha2 = "0.10"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "builder", "rustls-tls"] }
