[package]
name = "rgit"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Gitea(Go製)のRust版を目指す、自己ホスト型Git forge(git smart HTTP clone/push・OTPログイン・アクセス制御・Wiki・Issueまで実装、PR/Webhookは未実装)"
repository = "https://github.com/aon-co-jp/RS-Git"

[[bin]]
name = "rgit"
path = "src/main.rs"

[dependencies]
poem = { version = "3.1", features = ["static-files", "test"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
sha2 = "0.10"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "builder", "rustls-tls"] }
base64 = "0.22"
fs2 = "0.4"
chrono = "0.4"
rust-json = { path = "../RS-JSON", features = ["full"] }

[dev-dependencies]
tempfile = "3"
